<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_login"
    >


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="right"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="36dp"
            android:fontFamily="@font/tufont_bold"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:drawableStart="@drawable/custom_user_icon"
            android:drawablePadding="16dp"
            android:ems="10"
            android:fontFamily="@font/tufont"
            android:hint="@string/user_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_password_icon"
            android:ems="10"
            android:drawablePadding="16dp"
            android:fontFamily="@font/tufont"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tufont_bold"
            android:text="@string/remember_me"
            android:padding="5dp"
            android:onClick="Remember_me"
            android:textColor="@color/white"
            android:button="@drawable/custom_check_box"
            android:textSize="10dp"
            />

        <Button
            android:id="@+id/login"
            android:layout_marginTop="15dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tufont"
            android:textColor="@color/dark"
            android:background="@drawable/custom_button"
            android:onClick="login"
            android:text="@string/login"
            android:layout_gravity="center"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>