<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark"
    >
    <ImageView
        android:id="@+id/imageView"
        tools:ignore="ContentDescription"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_notifications_active_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/confirmation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button5"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:text="@string/agreement"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/decline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button6"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:text="@string/decline"
            android:textColor="@color/dark" />
    </LinearLayout>

</LinearLayout>