<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark"

    >

    <ImageView
        android:id="@+id/cancel_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        app:srcCompat="@drawable/ic_baseline_cancel_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_margin="15dp"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/profile_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/tufont_bold"
                android:text="@string/profile_name"
                android:textColor="@color/white"
                android:textSize="14dp" />
            <TextView
                android:id="@+id/role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/tufont_bold"
                android:text="@string/role_play"
                android:textColor="@color/Thammsart_yellow"
                android:drawableStart="@drawable/ic_baseline_house_24"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:textSize="12dp" />
            <TextView
                android:id="@+id/tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/tufont_bold"
                android:text="@string/tel"
                android:layout_marginStart="44dp"
                android:textColor="@color/Thammsart_yellow"
                android:drawablePadding="10dp"
                android:textSize="12dp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>