<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f3f4"
    >

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_button4"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backward"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/ic_backspace" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/show_own_report"
                android:textSize="18dp"
                android:fontFamily="@font/tufont_bold"
                android:textColor="@color/white"
                />

       
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_textview"
            >
            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/show_own_report"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_history_report"
                android:drawablePadding="15dp"
                android:layout_marginBottom="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/profile_acc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:text="@string/profile_name" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="65dp"
                        android:layout_marginBottom="10dp"
                        android:drawableStart="@drawable/ic_wrench"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"

                        android:text="@string/role_play" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/profile_image"
                    android:paddingRight="15dp"
                    android:paddingBottom="15dp"
                    />
            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/problem_list"
                />
        </ScrollView>
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>